src/main/java/com/example/zadanie_github/error/InvalidHeaderException.java
package com.example.zadanie_github.error;

public class InvalidHeaderException extends Exception{
    public InvalidHeaderException() {
    }
}
